<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/app_in_name"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="35sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/app_name_after"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/text_bottom"
        android:textColor="@color/text_bottom"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_above="@id/bottom"
        android:layout_width="match_parent"
        android:weightSum="2"
        android:layout_margin="15dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:background="@drawable/button_sign_in"
            android:text="@string/sign_in"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:background="@drawable/button_sign_in"
            android:layout_marginLeft="6dp"
            android:text="@string/sign_up" />

    </LinearLayout>

</RelativeLayout>